Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 <body>
 
   <h1>Reiju Norisugi</h1>
-  <p>Researcher in Earthquake Physics | Dynamic Rupture & Fault Mechanics</p>
+  <p>Master student, Department of Geophysics, Kyoto University</p>
 
   <div class="section">
-    <h2>Research Overview</h2>
-    <p>I study <strong>earthquake physics</strong>, focusing on dynamic rupture, fault mechanics, and earthquake sequence simulations using numerical modeling and high-performance computing.</p>
+    <h2>Research Interests</h2>
+    <p>I am studying earthquake physics and applications of machine learning techniques to geophysical problems.</p>
     <ul>
       <li>Earthquake nucleation</li>
       <li>Coseismic slip dynamics</li>
