Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
 
   <div class="section">
     <h2>Research Interests</h2>
-    <p>I am studying earthquake physics and applications of machine learning techniques to geophysical problems.</p>
+    <p>I am studying earthquake physics and applications of machine learning techniques to geophysical problems. My current research interests are the followings.</p>
     <ul>
-      <li>Earthquake nucleation</li>
-      <li>Coseismic slip dynamics</li>
-      <li>Afterslip and slow earthquakes</li>
+      <li>Multi-scale earthquake source property</li>
+      <li>Representation and scale-dependence of fault constitutive law</li>
+      <li>Rcok-friction and -fracture experiments</li>
+      <li>Fracture mechanics</li>
     </ul>
   </div>
 
