Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
       <li>Representation and scale-dependence of fault constitutive law</li>
       <li>Rcok-friction and -fracture experiments</li>
       <li>Fracture mechanics</li>
+      <li>Numerical simulation and modeling of dynamic earthquakse sequences</li>
+      <li>Machine learning for physics-based earthquake prediction</li>
     </ul>
   </div>
 
@@ -61,3 +63,4 @@
 
 </body>
 </html>
+
