--- a/index.html
+++ b/index.html
@@ -25,17 +25,19 @@
 
   <h1>Reiju Norisugi</h1>
   <p>Master student, Department of Geophysics, Kyoto University</p>
+  <h2>Contact</h2>
+    <p>Email: <a href="mailto:your.email@example.com">norisugi.reiju.77e@st.kyoto-u.ac.jp</a></p>
 
   <div class="section">
     <h2>Research Interests</h2>
     <p>I am studying earthquake physics and applications of machine learning techniques to geophysical problems. My current research interests are the followings.</p>
     <ul>
-      <li>Multi-scale earthquake source property</li>
-      <li>Representation and scale-dependence of fault constitutive law</li>
-      <li>Rcok-friction and -fracture experiments</li>
-      <li>Fracture mechanics</li>
-      <li>Numerical simulation and modeling of dynamic earthquakse sequences</li>
-      <li>Machine learning for physics-based earthquake prediction</li>
+      <li>Multi-scale earthquake source property.</li>
+      <li>Representation and scale-dependence of fault constitutive law.</li>
+      <li>Rcok-friction and -fracture experiments.</li>
+      <li>Fracture mechanics.</li>
+      <li>Numerical simulation and modeling of dynamic earthquakse sequences.</li>
+      <li>Machine learning for physics-based earthquake prediction.</li>
     </ul>
   </div>
 
