Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       margin: auto;
       padding: 2rem;
       line-height: 1.6;
-      background-color: #000;   /* 背景を黒に */
-      color: #fff;              /* 文字を白に */
+      background-color: #000;   /* 黒背景 */
+      color: #fff;              /* 白文字 */
     }
     h1, h2 { color: #fff; }
     a { color: #66ccff; text-decoration: none; }
@@ -25,15 +25,46 @@
       display: flex;
       align-items: center;
       gap: 1.5rem;
-      margin-bottom: 1.5rem;
+      margin-bottom: 1rem;
     }
 
     .profile-pic {
       width: 100px;
       height: 100px;
-      border-radius: 50%;     /* 写真を丸くする */
-      object-fit: cover;      /* 写真の切り抜きを自然にする */
-      border: 2px solid #fff; /* 白い縁取り */
+      border-radius: 50%;
+      object-fit: cover;
+      border: 2px solid #fff;
+    }
+
+    /* --- Social icon links --- */
+    .social-icons {
+      display: flex;
+      gap: 1rem;
+      margin: 0.5rem 0 1rem 0;
+    }
+
+    .icon-btn {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      background: #111;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transition: 0.2s;
+      border: 1px solid #444;
+    }
+
+    .icon-btn:hover {
+      background: #222;
+      border-color: #66ccff;
+      transform: scale(1.05);
+    }
+
+    .icon-btn svg {
+      width: 22px;
+      height: 22px;
+      fill: #fff;
     }
   </style>
 </head>
@@ -46,6 +77,32 @@
       <h1>Reiju Norisugi</h1>
       <p>Master student, Department of Geophysics, Kyoto University</p>
     </div>
+  </div>
+
+  <!-- ORCID & GitHub icons -->
+  <div class="social-icons">
+
+    <!-- ORCID -->
+    <a class="icon-btn" href="https://orcid.org/0009-0002-6610-9482" target="_blank">
+      <svg viewBox="0 0 256 256">
+        <path d="M128 0C57.308 0 0 57.308 0 128c0 70.692 57.308 128 128 128s128-57.308 128-128C256 57.308 198.692 0 128 0zm-8.42 61.14v133.72h-23.3V61.14h23.3zm73.58 133.72h-20.16l-48.22-67.36 48.22-66.36h20.16l-47.72 66.36 47.72 67.36z"/>
+      </svg>
+    </a>
+
+    <!-- GitHub -->
+    <a class="icon-btn" href="https://github.com/ReijuNorisugi" target="_blank">
+      <svg viewBox="0 0 16 16">
+        <path d="M8 0C3.58 0 0 3.58 0 8a8 8 0 005.47 7.59c.4.07.55-.17.55-.38 
+        0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52
+        -.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07
+        -1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 
+        0 0 .67-.21 2.2.82a7.48 7.48 0 012-.27c.68 0 1.36.09 2 .27 
+        1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 
+        1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 
+        0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0016 8c0-4.42-3.58-8-8-8z"/>
+      </svg>
+    </a>
+
   </div>
 
   <p>Email: <a href="mailto:norisugi.reiju.77e@st.kyoto-u.ac.jp">
