--- a/index.html
+++ b/index.html
@@ -80,30 +80,27 @@
   </div>
 
   <!-- ORCID & GitHub icons -->
-  <div class="social-icons">
+  <div class="social-icons" style="display: flex; flex-direction: column; gap: 0.4rem; margin-bottom: 1rem;">
 
-    <!-- ORCID -->
-    <a class="icon-btn" href="https://orcid.org/0009-0002-6610-9482" target="_blank">
-      <svg viewBox="0 0 256 256">
-        <path d="M128 0C57.308 0 0 57.308 0 128c0 70.692 57.308 128 128 128s128-57.308 128-128C256 57.308 198.692 0 128 0zm-8.42 61.14v133.72h-23.3V61.14h23.3zm73.58 133.72h-20.16l-48.22-67.36 48.22-66.36h20.16l-47.72 66.36 47.72 67.36z"/>
+    <!-- ORCID (icon + ID text) -->
+    <a href="https://orcid.org/0009-0002-6610-9482" target="_blank" style="display:flex; align-items:center; gap:0.5rem; color:#66ccff;">
+      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#66ccff" viewBox="0 0 256 256">
+        <circle cx="128" cy="128" r="120" stroke="none"/>
+        <text x="128" y="155" font-size="110" text-anchor="middle" fill="#000" font-family="Arial">i</text>
       </svg>
+      ORCID: 0009-0002-6610-9482
     </a>
 
-    <!-- GitHub -->
-    <a class="icon-btn" href="https://github.com/ReijuNorisugi" target="_blank">
-      <svg viewBox="0 0 16 16">
-        <path d="M8 0C3.58 0 0 3.58 0 8a8 8 0 005.47 7.59c.4.07.55-.17.55-.38 
-        0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52
-        -.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07
-        -1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 
-        0 0 .67-.21 2.2.82a7.48 7.48 0 012-.27c.68 0 1.36.09 2 .27 
-        1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 
-        1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 
-        0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0016 8c0-4.42-3.58-8-8-8z"/>
+    <!-- GitHub (icon + text) -->
+    <a href="https://github.com/ReijuNorisugi" target="_blank" style="display:flex; align-items:center; gap:0.5rem; color:#66ccff;">
+      <svg height="20" viewBox="0 0 16 16" width="20" fill="#66ccff">
+        <path d="M8 0C3.58 0 0 3.58 0 8a8 8 0 005.47 7.59..."/>
       </svg>
+      GitHub: ReijuNorisugi
     </a>
 
   </div>
+
 
   <p>Email: <a href="mailto:norisugi.reiju.77e@st.kyoto-u.ac.jp">
     norisugi.reiju.77e@st.kyoto-u.ac.jp
