--- a/index.html
+++ b/index.html
@@ -14,20 +14,24 @@
       background: #0b0b0e;
       font-family: "Inter", sans-serif;
       color: #e6e6e6;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
+      display: block; /* ← 修正 */
+      padding: 40px 0;
+    }
+
+    .container {
+      width: 90%;
+      max-width: 800px;
+      margin: auto;
     }
 
     .card {
       background: #111217;
       padding: 40px 50px;
       border-radius: 20px;
-      width: 480px;
       box-shadow: 0 0 40px rgba(0, 0, 0, 0.6);
       text-align: center;
       border: 1px solid rgba(255, 255, 255, 0.05);
+      margin-bottom: 40px;  /* 下のセクションと間をあける */
     }
 
     .photo {
@@ -84,69 +88,90 @@
     }
 
     .fa-orcid {
-      color: #A6CE39; /* ORCID公式カラー */
+      color: #A6CE39;
       font-size: 1.4rem;
     }
 
     .fa-github {
-      color: #ffffff; /* GitHub猫アイコン */
+      color: #ffffff;
       font-size: 1.4rem;
+    }
+
+    .section {
+      margin-bottom: 40px;
+    }
+
+    h2 {
+      border-left: 4px solid #444;
+      padding-left: 10px;
+    }
+
+    a {
+      color: #66c8ff;
     }
   </style>
 </head>
 
 <body>
-  <div class="card">
-    <div class="photo"></div>
 
-    <h1>Reiju Norisugi</h1>
-    <div class="subtext">Dynamic earthquake sequences / Physics-based simulations</div>
+  <div class="container">
 
-    <div class="links">
-      <a href="https://orcid.org/0000-0000-0000-0000" target="_blank">
-        <i class="fa-brands fa-orcid"></i>
-        ORCID: 0000-0000-0000-0000
-      </a>
+    <!-- Profile card -->
+    <div class="card">
+      <div class="photo"></div>
 
-      <a href="https://github.com/YourName" target="_blank">
-        <i class="fa-brands fa-github"></i>
-        GitHub Repository
-      </a>
+      <h1>Reiju Norisugi</h1>
+      <div class="subtext">Dynamic earthquake sequences / Physics-based simulations</div>
+
+      <p>Email: 
+        <a href="mailto:norisugi.reiju.77e@st.kyoto-u.ac.jp">
+          norisugi.reiju.77e@st.kyoto-u.ac.jp
+        </a>
+      </p>
+
+      <div class="links">
+        <a href="https://orcid.org/0000-0000-0000-0000" target="_blank">
+          <i class="fa-brands fa-orcid"></i>
+          ORCID: 0000-0000-0000-0000
+        </a>
+
+        <a href="https://github.com/YourName" target="_blank">
+          <i class="fa-brands fa-github"></i>
+          GitHub Repository
+        </a>
+      </div>
     </div>
-  </div>
 
-  <p>Email: <a href="mailto:norisugi.reiju.77e@st.kyoto-u.ac.jp">
-    norisugi.reiju.77e@st.kyoto-u.ac.jp
-  </a></p>
+    <!-- Sections -->
+    <div class="section">
+      <h2>Research Interests</h2>
+      <ul>
+        <li>Multi-scale earthquake source property.</li>
+        <li>Representation and scale-dependence of fault constitutive law.</li>
+        <li>Rock-friction and -fracture experiments.</li>
+        <li>Fracture mechanics.</li>
+        <li>Numerical simulation and modeling of dynamic earthquake sequences.</li>
+        <li>Machine learning for physics-based earthquake prediction.</li>
+      </ul>
+    </div>
 
-  <div class="section">
-    <h2>Research Interests</h2>
-    <p>I am studying earthquake physics and applications of machine learning techniques to geophysical problems. My current research interests are the followings.</p>
-    <ul>
-      <li>Multi-scale earthquake source property.</li>
-      <li>Representation and scale-dependence of fault constitutive law.</li>
-      <li>Rock-friction and -fracture experiments.</li>
-      <li>Fracture mechanics.</li>
-      <li>Numerical simulation and modeling of dynamic earthquake sequences.</li>
-      <li>Machine learning for physics-based earthquake prediction.</li>
-    </ul>
-  </div>
+    <div class="section">
+      <h2>Publications</h2>
+      <ul>
+        <li><a href="publications/paper1.pdf">Title of Paper 1</a></li>
+        <li><a href="publications/paper2.pdf">Title of Paper 2</a></li>
+        <li><a href="publications/paper3.pdf">Title of Paper 3</a></li>
+      </ul>
+    </div>
 
-  <div class="section">
-    <h2>Publications</h2>
-    <ul>
-      <li><a href="publications/paper1.pdf">Title of Paper 1</a></li>
-      <li><a href="publications/paper2.pdf">Title of Paper 2</a></li>
-      <li><a href="publications/paper3.pdf">Title of Paper 3</a></li>
-    </ul>
-  </div>
+    <div class="section">
+      <h2>Talks & Presentations</h2>
+      <ul>
+        <li>2025 – Conference XYZ: Talk on Dynamic Rupture</li>
+        <li>2024 – Workshop ABC: Simulation of Earthquake Sequences</li>
+      </ul>
+    </div>
 
-  <div class="section">
-    <h2>Talks & Presentations</h2>
-    <ul>
-      <li>2025 – Conference XYZ: Talk on Dynamic Rupture</li>
-      <li>2024 – Workshop ABC: Simulation of Earthquake Sequences</li>
-    </ul>
   </div>
 
 </body>
