Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
       <div class="photo"></div>
 
       <h1>Reiju Norisugi</h1>
-      <div class="subtext">Dynamic earthquake sequences / Physics-based simulations</div>
+      <div class="subtext">Master student</div>
+      <div class="subtext">Deparment of Geophysics, Kyoto University</div>
 
       <p>Email: 
         <a href="mailto:norisugi.reiju.77e@st.kyoto-u.ac.jp">
