Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
       </p>
 
       <div class="links">
-        <a href="https://orcid.org/0000-0000-0000-0000" target="_blank">
-          <i class="fa-brands fa-orcid"></i>
-          ORCID: 0000-0000-0000-0000
-        </a>
-
-        <a href="https://github.com/YourName" target="_blank">
+        <a href="https://github.com/ReijuNorisugi" target="_blank">
           <i class="fa-brands fa-github"></i>
           GitHub Repository
+        </a>
+
+        <a href="https://orcid.org/0009-0002-6610-9482" target="_blank">
+          <i class="fa-brands fa-orcid"></i>
+          ORCID: 0009-0002-6610-9482
         </a>
       </div>
     </div>
