Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -97,6 +97,12 @@
       font-size: 1.4rem;
     }
 
+    .fa-at {
+      font-size: 1.4rem;
+      color: #66c8ff;
+    }
+
+
     .section {
       margin-bottom: 40px;
     }
@@ -126,6 +132,7 @@
 
       <p>Email: 
         <a href="mailto:norisugi.reiju.77e@st.kyoto-u.ac.jp">
+          <i class="fa-solid fa-at"></i>
           norisugi.reiju.77e@st.kyoto-u.ac.jp
         </a>
       </p>
