--- a/index.html
+++ b/index.html
@@ -101,7 +101,11 @@
       font-size: 1.4rem;
       color: #66c8ff;
     }
-
+    
+    .fa-google {
+      color: #66c8ff;
+      font-size: 1.4rem;
+    }
 
     .section {
       margin-bottom: 40px;
@@ -134,6 +138,11 @@
         <a href="mailto:norisugi.reiju.77e@st.kyoto-u.ac.jp">
           <i class="fa-solid fa-at"></i>
           norisugi.reiju.77e@st.kyoto-u.ac.jp
+        </a>
+
+        <a href="https://scholar.google.com/citations?user=7JwUgzEAAAAJ&hl=ja" target="_blank">
+          <i class="fa-brands fa-google"></i>
+          Google Scholar
         </a>
 
         <a href="https://github.com/ReijuNorisugi" target="_blank">
