Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <style>
     body {
       margin: 0;
-      background: #0b0b0e;
+      background: #000031;
       font-family: "Inter", sans-serif;
       color: #e6e6e6;
       display: block; /* ← 修正 */
@@ -133,6 +133,7 @@
       <h1>Reiju Norisugi</h1>
       <div class="subtext">Master student</div>
       <div class="subtext">Deparment of Geophysics, Kyoto University</div>
+      <div class="subtext">Disaster Prevention Research Institute, Kyoto University</div>
 
       <div class="links">
         <a href="mailto:norisugi.reiju.77e@st.kyoto-u.ac.jp">
