--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <style>
     body {
       margin: 0;
-      background: #000031;
+      background: #00001f;
       font-family: "Inter", sans-serif;
       color: #e6e6e6;
       display: block; /* ← 修正 */
