Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -59,6 +59,18 @@
       margin-bottom: 25px;
     }
 
+    .subtext a {
+      color: #bdbdbd;
+      text-decoration: none;
+      transition: 0.2s ease;
+    }
+
+    .subtext a:hover {
+      color: #66c8ff;
+      text-decoration: underline;
+    }
+
+
     .links {
       display: flex;
       flex-direction: column;
@@ -131,9 +143,19 @@
       <div class="photo"></div>
 
       <h1>Reiju Norisugi</h1>
+
       <div class="subtext">Master student</div>
-      <div class="subtext">Deparment of Geophysics, Kyoto University</div>
-      <div class="subtext">Disaster Prevention Research Institute, Kyoto University</div>
+      <div class="subtext">
+        <a href="https://www.eps.sci.kyoto-u.ac.jp/index-e.html" target="_blank">
+          Department of Geophysics, Kyoto University
+        </a>
+      </div>
+
+      <div class="subtext">
+        <a href="https://eqhz.dpri.kyoto-u.ac.jp/#en" target="_blank">
+          Disaster Prevention Research Institute, Kyoto University
+        </a>
+      </div>
 
       <div class="links">
         <a href="mailto:norisugi.reiju.77e@st.kyoto-u.ac.jp">
