Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       <ul>
         <li>Multi-scale earthquake source property.</li>
         <li>Representation and scale-dependence of fault constitutive law.</li>
-        <li>Rock-friction and -fracture experiments.</li>
+        <li>Rock-friction and fracture experiments.</li>
         <li>Fracture mechanics.</li>
         <li>Numerical simulation and modeling of dynamic earthquake sequences.</li>
         <li>Machine learning for physics-based earthquake prediction.</li>
@@ -203,10 +203,11 @@
     </div>
 
     <div class="section">
-      <h2>Talks & Presentations</h2>
+      <h2>Adress</h2>
       <ul>
-        <li>2025 – Conference XYZ: Talk on Dynamic Rupture</li>
-        <li>2024 – Workshop ABC: Simulation of Earthquake Sequences</li>
+        <li>Room C205</li>
+        <li>Research Center for Earthquake Hazards</li>
+        <li>Gokasyo Uji City Kyoto 611-0011</li>
       </ul>
     </div>
 
