Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@
     <div class="section">
       <h2>Adress</h2>
       <ul>
-        <li>Room C205</li>
-        <li>Research Center for Earthquake Hazards</li>
-        <li>Gokasyo Uji City Kyoto 611-0011</li>
+        Room C205
+        Research Center for Earthquake Hazards
+        Gokasyo Uji City Kyoto 611-0011
       </ul>
     </div>
 
