--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
     <!-- Sections -->
     <div class="section">
       <h2>Research Interests</h2>
+      I am studying earthquake source physics and applications of machine learning technique to geophysical problems. My current research interests are the followings.
       <ul>
         <li>Multi-scale earthquake source property.</li>
         <li>Representation and scale-dependence of fault constitutive law.</li>
@@ -204,11 +205,11 @@
 
     <div class="section">
       <h2>Adress</h2>
-      <ul>
-        Room C205
-        Research Center for Earthquake Hazards
+      <p>
+        Room C205<br>
+        Research Center for Earthquake Hazards<br>
         Gokasyo Uji City Kyoto 611-0011
-      </ul>
+      </p>
     </div>
 
   </div>
