--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     }
 
     .photo {
-      width: 140px;
-      height: 140px;
+      width: 150px;
+      height: 150px;
       border-radius: 50%;
       margin: 0 auto 20px auto;
       background-size: cover;
@@ -183,7 +183,7 @@
     <!-- Sections -->
     <div class="section">
       <h2>Research Interests</h2>
-      I am studying earthquake source physics and applications of machine learning technique to geophysical problems. My current research interests are the followings.
+      I am studying earthquake source physics and applications of machine learning techniques to geophysical problems. My current research interests are the followings.
       <ul>
         <li>Multi-scale earthquake source property.</li>
         <li>Representation and scale-dependence of fault constitutive law.</li>
