--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
     <div class="section">
       <h2>Adress</h2>
       <p>
-        Room C205<br>
-        Research Center for Earthquake Hazards<br>
-        Gokasyo Uji City Kyoto 611-0011
+        Research Center for Earthquake Hazards, Room C205<br>
+        Disaster Prevention Research Institute<br>
+        Gokasyo Uji City, Kyoto, 611-0011
       </p>
     </div>
 
