--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       box-shadow: 0 0 40px rgba(0, 0, 0, 0.6);
       text-align: center;
       border: 1px solid rgba(255, 255, 255, 0.05);
-      margin-bottom: 40px;  /* 下のセクションと間をあける */
+      margin-bottom: 42px;
     }
 
     .photo {
