--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
 
         <a href="https://github.com/ReijuNorisugi" target="_blank">
           <i class="fa-brands fa-github"></i>
-          GitHub Repository
+          GitHub Repository (to be updated)
         </a>
 
-        <a href="https://zenodo.org/search?page=1&size=20&q=ORCID:0009-0002-6610-9482" target="_blank">
+        <a href="https://zenodo.org/search?page=1&size=20&q=ORCID%3A0009-0002-6610-9482" target="_blank">
           <i class="fa-solid fa-box"></i>
           Zenodo Repository
         </a>
