Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     .fa-github { color: #ffffff; font-size: 1.4rem; }
     .fa-at { color: #66c8ff; font-size: 1.4rem; }
     .fa-google { color: #66c8ff; font-size: 1.4rem; }
-    .fa-box { color: #ffcc00; font-size: 1.4rem; } /* Zenodoアイコン色 */
+    .fa-box { color: #713c96; font-size: 1.4rem; }
 
     .section { margin-bottom: 40px; }
 
@@ -152,7 +152,7 @@
           GitHub Repository (to be updated)
         </a>
 
-        <a href="https://zenodo.org/search?page=1&size=20&q=ORCID%3A0009-0002-6610-9482" target="_blank">
+        <a href='metadata.creators.person_or_org.name:"Norisugi, Reiju"' target="_blank">
           <i class="fa-solid fa-box"></i>
           Zenodo Repository
         </a>
