--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     .fa-github { color: #ffffff; font-size: 1.4rem; }
     .fa-at { color: #66c8ff; font-size: 1.4rem; }
     .fa-google { color: #66c8ff; font-size: 1.4rem; }
-    .fa-box { color: #713c96; font-size: 1.4rem; }
+    .fa-box { color: #a86cd3; font-size: 1.4rem; }
 
     .section { margin-bottom: 40px; }
 
