Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           GitHub Repository (to be updated)
         </a>
 
-        <a href='metadata.creators.person_or_org.name:"Norisugi, Reiju"' target="_blank">
+        <a href='https://zenodo.org/search?page=1&size=20&q=metadata.creators.person_or_org.name:"Norisugi, Reiju"' target="_blank">
           <i class="fa-solid fa-box"></i>
           Zenodo Repository
         </a>
