--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Reiju Norisugi</title>
+  <title>Reiju Norisugi</title>  
   
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -16,6 +16,7 @@
       color: #e6e6e6;
       display: block;
       padding: 40px 0;
+      position: relative;
     }
 
     .container {
@@ -24,6 +25,7 @@
       margin: auto;
     }
 
+    /* Profile Card */
     .card {
       background: #111217;
       padding: 40px 50px;
@@ -46,30 +48,13 @@
       box-shadow: 0 0 15px rgba(0, 0, 0, 0.4);
     }
 
-    h1 {
-      font-size: 2rem;
-      margin-bottom: 25px;
-      letter-spacing: 1px;
-      font-weight: 600;
-    }
+    h1 { font-size: 2rem; margin-bottom: 25px; letter-spacing: 1px; font-weight: 600; }
 
-    .subtext {
-      font-size: 1.05rem;
-      color: #bdbdbd;
-      margin-bottom: 20px;
-    }
+    .subtext { font-size: 1.05rem; color: #bdbdbd; margin-bottom: 20px; }
+    .subtext a { color: #bdbdbd; text-decoration: none; transition: 0.2s ease; }
+    .subtext a:hover { color: #66c8ff; text-decoration: underline; }
 
-    .subtext a {
-      color: #bdbdbd;
-      text-decoration: none;
-      transition: 0.2s ease;
-    }
-
-    .subtext a:hover {
-      color: #66c8ff;
-      text-decoration: underline;
-    }
-
+    /* Links */
     .links {
       display: flex;
       flex-direction: column;
@@ -104,98 +89,180 @@
     .fa-google { color: #66c8ff; font-size: 1.4rem; }
     .fa-box { color: #a86cd3; font-size: 1.4rem; }
 
+    /* Sections */
     .section { margin-bottom: 40px; }
+    h2 { border-left: 4px solid #444; padding-left: 10px; }
+    a { color: #66c8ff; }
 
-    h2 {
-      border-left: 4px solid #444;
-      padding-left: 10px;
+    /* Modal */
+    #pubModal {
+      display: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.85);
+      z-index: 1000;
     }
 
-    a { color: #66c8ff; }
+    #pubModalContent {
+      margin: 5% auto;
+      background: #111217;
+      padding: 30px;
+      width: 90%;
+      max-width: 600px;
+      border-radius: 15px;
+      position: relative;
+      color: #e6e6e6;
+    }
+
+    #pubModalContent h2 { margin-top: 0; }
+    #pubModalContent ul { margin-left: 1.5rem; }
+    #pubModalContent .close {
+      position: absolute;
+      top: 10px;
+      right: 20px;
+      font-size: 1.5rem;
+      cursor: pointer;
+      color: #66c8ff;
+    }
+
+    /* Sidebar Banner */
+    .pub-banner {
+      position: fixed;
+      top: 50%;
+      right: 0;
+      transform: translateY(-50%);
+      background: #1b1c22;
+      padding: 10px 15px;
+      border-radius: 8px 0 0 8px;
+      writing-mode: vertical-rl;
+      font-weight: bold;
+      cursor: pointer;
+      color: #66c8ff;
+      z-index: 999;
+      transition: 0.2s;
+    }
+    .pub-banner:hover { background: #25262e; }
+
+    /* Footer */
+    footer {
+      margin-top: 60px;
+      text-align: center;
+      font-size: 0.85rem;
+      color: #888;
+      padding: 20px 0;
+      border-top: 1px solid rgba(255,255,255,0.1);
+    }
   </style>
 </head>
 
 <body>
-  <div class="container">
 
-    <!-- Profile card -->
-    <div class="card">
-      <div class="photo"></div>
+<div class="container">
 
-      <h1>Reiju Norisugi</h1>
+  <!-- Profile card -->
+  <div class="card">
+    <div class="photo"></div>
 
-      <div class="subtext">Master student</div>
-      <div class="subtext">
-        <a href="https://www.eps.sci.kyoto-u.ac.jp/index-e.html" target="_blank">
-          Department of Geophysics, Kyoto University
-        </a>
-      </div>
-      <div class="subtext">
-        <a href="https://eqhz.dpri.kyoto-u.ac.jp/#en" target="_blank">
-          Disaster Prevention Research Institute, Kyoto University
-        </a>
-      </div>
+    <h1>Reiju Norisugi</h1>
+    <div class="subtext">Master student</div>
 
-      <div class="links">
-        <a href="mailto:norisugi.reiju.77e@st.kyoto-u.ac.jp">
-          <i class="fa-solid fa-at"></i>
-          norisugi.reiju.77e@st.kyoto-u.ac.jp
-        </a>
-
-        <a href="https://scholar.google.com/citations?user=7JwUgzEAAAAJ&hl=ja" target="_blank">
-          <i class="fa-brands fa-google"></i>
-          Google Scholar
-        </a>
-
-        <a href="https://github.com/ReijuNorisugi" target="_blank">
-          <i class="fa-brands fa-github"></i>
-          GitHub Repository (to be updated)
-        </a>
-
-        <a href='https://zenodo.org/search?page=1&size=20&q=metadata.creators.person_or_org.name:"Norisugi, Reiju"' target="_blank">
-          <i class="fa-solid fa-box"></i>
-          Zenodo Repository
-        </a>
-
-        <a href="https://orcid.org/0009-0002-6610-9482" target="_blank">
-          <i class="fa-brands fa-orcid"></i>
-          ORCID: 0009-0002-6610-9482
-        </a>
-      </div>
+    <div class="subtext">
+      <a href="https://www.eps.sci.kyoto-u.ac.jp/index-e.html" target="_blank">
+        Department of Geophysics, Kyoto University
+      </a>
     </div>
 
-    <!-- Sections -->
-    <div class="section">
-      <h2>Research Interests</h2>
-      I am studying earthquake source physics and applications of machine learning techniques to geophysical problems. My current research interests are the followings.
-      <ul>
-        <li>Multi-scale earthquake source property.</li>
-        <li>Representation and scale-dependence of fault constitutive law.</li>
-        <li>Rock-friction and fracture experiments.</li>
-        <li>Fracture mechanics.</li>
-        <li>Numerical simulation and modeling of dynamic earthquake sequences.</li>
-        <li>Machine learning for physics-based earthquake prediction.</li>
-      </ul>
+    <div class="subtext">
+      <a href="https://eqhz.dpri.kyoto-u.ac.jp/#en" target="_blank">
+        Disaster Prevention Research Institute, Kyoto University
+      </a>
     </div>
 
-    <div class="section">
-      <h2>Publications</h2>
-      <ul>
-        <li><a href="publications/paper1.pdf">Title of Paper 1</a></li>
-        <li><a href="publications/paper2.pdf">Title of Paper 2</a></li>
-        <li><a href="publications/paper3.pdf">Title of Paper 3</a></li>
-      </ul>
-    </div>
+    <div class="links">
+      <a href="mailto:norisugi.reiju.77e@st.kyoto-u.ac.jp">
+        <i class="fa-solid fa-at"></i>
+        norisugi.reiju.77e@st.kyoto-u.ac.jp
+      </a>
 
-    <div class="section">
-      <h2>Adress</h2>
-      <p>
-        Research Center for Earthquake Hazards, Room C205<br>
-        Disaster Prevention Research Institute<br>
-        Gokasyo Uji City, Kyoto, 611-0011
-      </p>
-    </div>
+      <a href="https://scholar.google.com/citations?user=7JwUgzEAAAAJ&hl=ja" target="_blank">
+        <i class="fa-brands fa-google"></i>
+        Google Scholar
+      </a>
 
+      <a href="https://github.com/ReijuNorisugi" target="_blank">
+        <i class="fa-brands fa-github"></i>
+        GitHub Repository (to be updated)
+      </a>
+
+      <a href='https://zenodo.org/search?page=1&size=20&q=metadata.creators.person_or_org.name:"Norisugi, Reiju"' target="_blank">
+        <i class="fa-solid fa-box"></i>
+        Zenodo Repository
+      </a>
+
+      <a href="https://orcid.org/0009-0002-6610-9482" target="_blank">
+        <i class="fa-brands fa-orcid"></i>
+        ORCID: 0009-0002-6610-9482
+      </a>
+    </div>
   </div>
+
+  <!-- Sections -->
+  <div class="section">
+    <h2>Research Interests</h2>
+    I am studying earthquake source physics and applications of machine learning techniques to geophysical problems. My current research interests are the followings.
+    <ul>
+      <li>Multi-scale earthquake source property.</li>
+      <li>Representation and scale-dependence of fault constitutive law.</li>
+      <li>Rock-friction and fracture experiments.</li>
+      <li>Fracture mechanics.</li>
+      <li>Numerical simulation and modeling of dynamic earthquake sequences.</li>
+      <li>Machine learning for physics-based earthquake prediction.</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>Publications</h2>
+    <ul>
+      <li><a href="publications/paper1.pdf">Title of Paper 1</a></li>
+      <li><a href="publications/paper2.pdf">Title of Paper 2</a></li>
+      <li><a href="publications/paper3.pdf">Title of Paper 3</a></li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>Address</h2>
+    <p>
+      Research Center for Earthquake Hazards, Room C205<br>
+      Disaster Prevention Research Institute<br>
+      Gokasyo Uji City, Kyoto, 611-0011
+    </p>
+  </div>
+
+</div>
+
+<!-- Modal -->
+<div id="pubModal">
+  <div id="pubModalContent">
+    <span class="close" onclick="document.getElementById('pubModal').style.display='none'">&times;</span>
+    <h2>Publications</h2>
+    <ul>
+      <li><a href="publications/paper1.pdf">Title of Paper 1</a></li>
+      <li><a href="publications/paper2.pdf">Title of Paper 2</a></li>
+      <li><a href="publications/paper3.pdf">Title of Paper 3</a></li>
+    </ul>
+  </div>
+</div>
+
+<!-- Sidebar Banner -->
+<div class="pub-banner" onclick="document.getElementById('pubModal').style.display='block'">
+  Publications
+</div>
+
+<!-- Footer -->
+<footer>
+  &copy; 2025 Reiju Norisugi. Licensed under <a href="https://opensource.org/licenses/MIT" target="_blank">MIT License</a>.
+</footer>
+
 </body>
 </html>
