Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     .fa-orcid { color: #A6CE39; font-size: 1.4rem; }
     .fa-github { color: #ffffff; font-size: 1.4rem; }
     .fa-at { color: #66c8ff; font-size: 1.4rem; }
-    .fa-google { color: #66c8ff; font-size: 1.4rem; }
+    .fa-google { color: #FFC107; font-size: 1.4rem; }
     .fa-box { color: #a86cd3; font-size: 1.4rem; }
 
     .section { margin-bottom: 40px; }
@@ -140,7 +140,7 @@
 
       <h1>Reiju Norisugi</h1>
 
-      <div class="subtext">Master student</div>
+      <div class="subtext">Second year master's student</div>
       <div class="subtext">
         <a href="https://www.eps.sci.kyoto-u.ac.jp/index-e.html" target="_blank">
           Department of Geophysics, Kyoto University
