Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -197,9 +197,10 @@
       <h2 id="pub-toggle">Publications ▼</h2>
       <div class="accordion-content" id="pub-list">
         <ul>
-          <li><a href="publications/paper1.pdf">Title of Paper 1</a></li>
-          <li><a href="publications/paper2.pdf">Title of Paper 2</a></li>
-          <li><a href="publications/paper3.pdf">Title of Paper 3</a></li>
+          <li>
+            Norisugi, R., Kaneko, Y., & Rouet‐Leduc, B. (2024). Machine learning predicts earthquakes in the continuum model of a rate‐and‐state fault with frictional heterogeneities. <i>Geophysical Research Letters</i>, 51(9), e2024GL108655.
+            <a href="https://doi.org/10.1029/2024GL108655" target="_blank">https://doi.org/10.1029/2024GL108655</a>
+          </li>
         </ul>
       </div>
     </div>
