--- a/index.html
+++ b/index.html
@@ -198,7 +198,9 @@
       <div class="accordion-content" id="pub-list">
         <ul>
           <li>
-            Norisugi, R., Kaneko, Y., & Rouet‐Leduc, B. (2024). Machine learning predicts earthquakes in the continuum model of a rate‐and‐state fault with frictional heterogeneities. <i>Geophysical Research Letters</i>, 51(9), e2024GL108655.
+            Norisugi, R., Kaneko, Y., & Rouet-Leduc, B. (2024).<br>
+            Machine learning predicts earthquakes in the continuum model of a rate-and-state fault with frictional heterogeneities.<br>
+            <i>Geophysical Research Letters</i>, 51(9), e2024GL108655.
             <a href="https://doi.org/10.1029/2024GL108655" target="_blank">https://doi.org/10.1029/2024GL108655</a>
           </li>
         </ul>
