Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -198,6 +198,13 @@
       <div class="accordion-content" id="pub-list">
         <ul>
           <li>
+            Norisugi, R., Kaneko, Y., & Rouet-Leduc, B. (2025).<br>
+            Machine learning predicts meter-scale laboratory earthquakes.<br>
+            <i>Nature Communications</i>, 16(1), 9593.
+            <a href="https://doi.org/10.1038/s41467-025-64542-4" target="_blank">https://doi.org/10.1038/s41467-025-64542-4</a>
+          </li>
+
+          <li>
             Norisugi, R., Kaneko, Y., & Rouet-Leduc, B. (2024).<br>
             Machine learning predicts earthquakes in the continuum model of a rate-and-state fault with frictional heterogeneities.<br>
             <i>Geophysical Research Letters</i>, 51(9), e2024GL108655.
