--- a/index.html
+++ b/index.html
@@ -127,7 +127,11 @@
     }
 
     .accordion-content li {
-      margin-bottom: 5px;
+      margin-bottom: 12px; /* 行間を少し広げる */
+    }
+
+    .accordion-content li:last-child {
+      margin-bottom: 0;
     }
   </style>
 </head>
@@ -180,6 +184,7 @@
       </div>
     </div>
 
+    <!-- Sections -->
     <div class="section">
       <h2>Research Interests</h2>
       I am studying earthquake source physics and applications of machine learning techniques to geophysical problems. My current research interests are the followings.
