--- a/index.html
+++ b/index.html
@@ -122,16 +122,27 @@
       margin-top: 10px;
     }
 
-    .accordion-content ul {
+    /* 論文リスト番号 [1], [2], ... 下から1 */
+    .doi-list {
+      counter-reset: doi-counter;
+      display: flex;
+      flex-direction: column-reverse;
       padding-left: 20px;
     }
 
-    .accordion-content li {
-      margin-bottom: 12px; /* 行間を少し広げる */
+    .doi-list li {
+      margin-bottom: 12px;
+      list-style: none;
+      counter-increment: doi-counter;
+      position: relative;
     }
 
-    .accordion-content li:last-child {
-      margin-bottom: 0;
+    .doi-list li::before {
+      content: "[" counter(doi-counter) "] ";
+      color: #66c8ff;
+      font-weight: bold;
+      position: absolute;
+      left: -30px;
     }
   </style>
 </head>
@@ -184,7 +195,6 @@
       </div>
     </div>
 
-    <!-- Sections -->
     <div class="section">
       <h2>Research Interests</h2>
       I am studying earthquake source physics and applications of machine learning techniques to geophysical problems. My current research interests are the followings.
@@ -201,21 +211,21 @@
     <div class="section">
       <h2 id="pub-toggle">Publications ▼</h2>
       <div class="accordion-content" id="pub-list">
-        <ul>
-          <li>
-            Norisugi, R., Kaneko, Y., & Rouet-Leduc, B. (2025).<br>
-            Machine learning predicts meter-scale laboratory earthquakes.<br>
-            <i>Nature Communications</i>, 16(1), 9593.
-            <a href="https://doi.org/10.1038/s41467-025-64542-4" target="_blank">https://doi.org/10.1038/s41467-025-64542-4</a>
-          </li>
-
+        <ol class="doi-list">
           <li>
             Norisugi, R., Kaneko, Y., & Rouet-Leduc, B. (2024).<br>
             Machine learning predicts earthquakes in the continuum model of a rate-and-state fault with frictional heterogeneities.<br>
-            <i>Geophysical Research Letters</i>, 51(9), e2024GL108655.
+            <i>Geophysical Research Letters</i>, 51(9), e2024GL108655.<br>
             <a href="https://doi.org/10.1029/2024GL108655" target="_blank">https://doi.org/10.1029/2024GL108655</a>
           </li>
-        </ul>
+
+          <li>
+            Norisugi, R., Kaneko, Y., & Rouet-Leduc, B. (2025).<br>
+            Machine learning predicts meter-scale laboratory earthquakes.<br>
+            <i>Nature Communications</i>, 16(1), 9593.<br>
+            <a href="https://doi.org/10.1038/s41467-025-64542-4" target="_blank">https://doi.org/10.1038/s41467-025-64542-4</a>
+          </li>
+        </ol>
       </div>
     </div>
 
