--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     /* 追加：研究内容・Publications の白カード */
     .white-card {
-      background: #ffffff;
+      background: #faf7f2;
       color: #000000;
       padding: 35px 40px;
       border-radius: 18px;
