Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       margin: auto;
     }
 
-    /* 黒い通常カード（プロフィール部分） */
+    /* Black card for profile */
     .card {
       background: #111217;
       padding: 40px 50px;
@@ -34,9 +34,9 @@
       margin-bottom: 42px;
     }
 
-    /* 追加：研究内容・Publications の白カード */
+    /* White card for texts */
     .white-card {
-      background: #faf7f2;
+      background: #ececee;
       color: #000000;
       padding: 35px 40px;
       border-radius: 18px;
