Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     /* White card for texts */
     .white-card {
-      background: #d0d0d4;
+      background: #b9b9bc;
       color: #000000;
       padding: 35px 40px;
       border-radius: 18px;
