Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -162,6 +162,23 @@
       left: -32px;
     }
 
+    .footer {
+      margin-top: 60px;
+      padding: 20px 10px;
+      text-align: center;
+      font-size: 0.9rem;
+      color: #cccccc;
+      opacity: 0.8;
+    }
+
+    .footer a {
+      color: #66c8ff;
+      text-decoration: none;
+    }
+
+    .footer a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
@@ -276,5 +293,15 @@
       }
     });
   </script>
+
+  <footer class="footer">
+    <p>© 2025 Reiju Norisugi</p>
+    <p>
+      This website is licensed under
+      <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">
+        CC BY 4.0
+      </a>.
+    </p>
+  </footer>
 </body>
 </html>
