Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     /* DOI list */
     .doi-list li::before {
       content: "[" counter(doi-counter) "] ";
-      color: rgba(0, 150, 255, 0.3);
+      color: #0033aa;
       font-weight: bold;
       position: absolute;
       left: -32px;
