Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     }
 
     .footer {
-      margin-top: 60px;
+      margin-top: 30px;
       padding: 20px 10px;
       text-align: center;
       font-size: 0.9rem;
@@ -273,7 +273,7 @@
       <p>
         Research Center for Earthquake Hazards, Room C205<br>
         Disaster Prevention Research Institute<br>
-        Gokasyo Uji City, Kyoto, 611-0011
+        Gokasyo Uji City, Kyoto, 〒611-0011
       </p>
     </div>
 
