Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -270,22 +270,11 @@
 
     <div class="section">
       <h2>Address</h2>
-
-      <div class="address-row">
-        <p class="address-text">
-          Research Center for Earthquake Hazards, Room C205<br>
-          Disaster Prevention Research Institute<br>
-          Gokasyo Uji City, Kyoto, <span style="letter-spacing:1px">〒611-0011</span>
-        </p>
-
-        <!-- Google Maps link -->
-        <a class="map-link"
-          href="https://www.google.com/maps/place/Disaster+Prevention+Research+Institute+Kyoto+University/"
-          target="_blank"
-          title="Open in Google Maps">
-          <i class="fa-solid fa-location-dot"></i>
-        </a>
-      </div>
+      <p>
+        Research Center for Earthquake Hazards, Room C205<br>
+        Disaster Prevention Research Institute<br>
+        Gokasyo Uji City, Kyoto, 〒611-0011
+      </p>
     </div>
 
   </div>
